# vk_edu_cpp_homework2

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml  linters.yml  load-testing.yml  tests.yml
project/: main.c
project/include/: interface.h  matrix.h  utils.h
project/src/: interface.c  matrix.c  utils.c
project/src/consistent/: matrix_operations.c
project/src/parallel/: matrix_operations.c
scripts/: build.sh  coverage-measure.sh  format-check.sh  linters-check.sh  load-testing.sh  matrix_generator.py  transpose.py
tests/: InterfaceTests.cpp  MatrixTest.cpp  UtilsTests.cpp
